# GLtxt

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
include/gltxt/: character.h  font.h  gltxt.h  label.h  mesh.h
src/: CMakeLists.txt  character.cpp  font.cpp  gl.h  gltxt.cpp  internal.cpp  internal.h  label.cpp  mesh.cpp
